--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 anyio==3.6.2
+bcrypt==4.0.1
 black==23.3.0
 certifi==2022.12.7
 click==8.1.3
@@ -18,6 +19,7 @@ MarkupSafe==2.1.2
 mypy-extensions==1.0.0
 orjson==3.8.11
 packaging==23.1
+passlib==1.7.4
 pathspec==0.11.1
 platformdirs==3.5.0
 psycopg2==2.9.6
