--- a/docker-compose-original.yml
+++ b/docker-compose-original.yml
@@ -1,9 +1,17 @@
 version: "3.8"
 services:
+  api:
+    build: .
+    ports:
+      - 8000:8000
+    env_file:
+      - ./.env
   pgdatabase:
     image: postgres:13
     container_name: local_pgdb
     restart: always
+    env_file:
+      - ./.env
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
@@ -16,6 +24,8 @@ services:
     image: dpage/pgadmin4
     container_name: pgadmin4_container
     restart: always
+    env_file:
+      - ./.env
     environment:
       - PGADMIN_DEFAULT_EMAIL=${PGADMIN_DEFAULT_EMAIL}
       - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_DEFAULT_PASSWORD}
