--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -10,10 +10,12 @@ services:
       - ./.env
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     depends_on:
-      - postgres
+      - pgdatabase
 
-  postgres:
-    image: postgres
+  pgdatabase:
+    image: postgres:13
+    ports:
+      - 5432:5432
     env_file:
       - ./.env
     volumes:
