--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   job1:
-    runs-on: unbuntu-20.04
+    runs-on: ubuntu-20.04
     steps:
       - name: pulling git repo
         uses: actions/checkout@v2
