--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -13,6 +13,12 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: pulling git repo
-        uses: actions/checkout@v2
-      - name: say hello
-        run: echo "hello"
+        uses: actions/checkout@v3
+      - name: install python 3.9
+        uses: actions/setup-python@v3.1.4
+        with: 
+          python-version: "3.10"
+      - name: update pip
+        run: python -m pip install --upgrade pip
+      - name: install packages
+        run: pip install -r requirements.txt
