--- a/docker-compose-pgadmin.yml
+++ b/docker-compose-pgadmin.yml
@@ -12,6 +12,6 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - pgadmin-data:/var/lib/pgadmin
+      - pgadmin-datas:/var/lib/pgadmin
 volumes:
-  pgadmin-data:
+  pgadmin-datas:
