Add job env vars to github action

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -10,6 +10,17 @@ on:
 
 jobs:
   job1:
+    env: 
+      DATABASE_HOSTNAME: localhost
+      POSTGRES_HOST: localhost
+      POSTGRES_DB: fast_api
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password123
+      PGADMIN_DEFAULT_EMAIL: matthewphilipjordan@gmail.com
+      PGADMIN_DEFAULT_PASSWORD: password123
+      SECRET_KEY: giNOnzM5O96KKLwMfO7p5oPWorKGy6TKbVe7vlFRKiVOoGSjAy
+      ALGORITHM: HS256
+      ACCESS_TOKEN_EXPIRE_MINUTES: 30
     runs-on: ubuntu-20.04
     steps:
       - name: pulling git repo
