--- a/requirements.txt
+++ b/requirements.txt
@@ -1,134 +1,53 @@
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.0.8
-attrs==22.1.0
-backcall==0.2.0
-beautifulsoup4==4.11.1
-black==22.8.0
-bleach==5.0.1
-boto3==1.26.23
-botocore==1.29.23
-cachetools==5.2.0
-certifi==2022.6.15
+alembic==1.11.1
+anyio==3.6.2
+bcrypt==3.2.0
+black==23.3.0
+certifi==2022.12.7
 cffi==1.15.1
-charset-normalizer==2.1.1
-cli-helpers==2.2.1
 click==8.1.3
-colorama==0.4.5
-configobj==5.0.6
-contourpy==1.0.6
-cycler==0.11.0
-dash==2.7.1
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-debugpy==1.6.3
-decorator==5.1.1
-defusedxml==0.7.1
-entrypoints==0.4
-executing==0.10.0
-fastjsonschema==2.16.1
-Flask==2.2.2
-fonttools==4.38.0
-google-api-core==1.34.0
-google-auth==2.11.0
-google-cloud-appengine-logging==1.1.6
-google-cloud-audit-log==0.2.4
-google-cloud-core==2.3.2
-google-cloud-dataproc==1.1.0
-google-cloud-logging==3.3.0
-google-cloud-storage==2.6.0
-google-crc32c==1.3.0
-google-resumable-media==2.3.3
-googleapis-common-protos==1.56.4
-greenlet==1.1.2
-grpc-google-iam-v1==0.12.4
-grpcio==1.51.1
-grpcio-status==1.48.2
-idna==3.3
-ipykernel==6.15.1
-ipython==8.4.0
-ipython-genutils==0.2.0
-ipywidgets==7.7.1
+colorama==0.4.6
+cryptography==40.0.2
+dnspython==2.3.0
+ecdsa==0.18.0
+email-validator==2.0.0.post2
+exceptiongroup==1.1.1
+fastapi==0.95.1
+greenlet==2.0.2
+gunicorn==20.1.0
+h11==0.14.0
+httpcore==0.17.0
+httptools==0.5.0
+httpx==0.24.0
+idna==3.4
+iniconfig==2.0.0
 itsdangerous==2.1.2
-jedi==0.18.1
 Jinja2==3.1.2
-jmespath==1.0.1
-jsonschema==4.9.1
-jupyter==1.0.0
-jupyter-client==7.3.4
-jupyter-console==6.4.4
-jupyter-core==4.11.1
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==1.1.1
-kiwisolver==1.4.4
-lxml==4.9.1
-MarkupSafe==2.1.1
-matplotlib==3.6.2
-matplotlib-inline==0.1.3
-mistune==0.8.4
-mrjob==0.7.4
-mypy-extensions==0.4.3
-nbclient==0.6.6
-nbconvert==6.5.3
-nbformat==5.4.0
-nest-asyncio==1.5.5
-notebook==6.4.12
-numpy==1.23.2
-packaging==21.3
-pandas==1.4.3
-pandocfilters==1.5.0
-parso==0.8.3
-pathspec==0.10.1
-pendulum==2.1.2
-pgcli==3.4.1
-pgspecial==1.13.1
-pickleshare==0.7.5
-Pillow==9.3.0
-platformdirs==2.5.2
-plotly==5.11.0
-prometheus-client==0.14.1
-prompt-toolkit==3.0.30
-proto-plus==1.22.1
-protobuf==3.20.3
-psutil==5.9.1
-psycopg2==2.9.3
-pure-eval==0.2.2
-pyarrow==9.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
+Mako==1.2.4
+MarkupSafe==2.1.2
+mypy-extensions==1.0.0
+orjson==3.8.11
+packaging==23.1
+passlib==1.7.4
+pathspec==0.11.1
+platformdirs==3.5.0
+pluggy==1.0.0
+psycopg2==2.9.6
+pyasn1==0.5.0
 pycparser==2.21
-Pygments==2.13.0
-pyparsing==3.0.9
-pyrsistent==0.18.1
-python-dateutil==2.8.2
-pytz==2022.2.1
-pytzdata==2020.1
-pywin32==304
-pywinpty==2.0.7
+pydantic==1.10.7
+pytest==7.3.1
+python-dotenv==1.0.0
+python-jose==3.3.0
+python-multipart==0.0.6
 PyYAML==6.0
-pyzmq==23.2.1
-qtconsole==5.3.1
-QtPy==2.2.0
-requests==2.28.1
 rsa==4.9
-s3transfer==0.6.0
-Send2Trash==1.8.0
-setproctitle==1.3.2
 six==1.16.0
-soupsieve==2.3.2.post1
-SQLAlchemy==1.4.40
-sqlparse==0.4.2
-stack-data==0.4.0
-tabulate==0.8.10
-tenacity==8.1.0
-terminado==0.15.0
-tinycss2==1.1.1
+sniffio==1.3.0
+SQLAlchemy==1.4.23
+starlette==0.26.1
 tomli==2.0.1
-tornado==6.2
-traitlets==5.3.0
-urllib3==1.26.12
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==2.2.2
-widgetsnbextension==3.6.1
+typing_extensions==4.5.0
+ujson==5.7.0
+uvicorn==0.22.0
+watchfiles==0.19.0
+websockets==11.0.2
