Update github workflow

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -10,17 +10,16 @@ on:
 
 jobs:
   job1:
+    environment: 
+      name: testing
     env: 
-      DATABASE_HOSTNAME: localhost
-      POSTGRES_HOST: localhost
-      POSTGRES_DB: fast_api
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password123
-      PGADMIN_DEFAULT_EMAIL: matthewphilipjordan@gmail.com
-      PGADMIN_DEFAULT_PASSWORD: password123
-      SECRET_KEY: giNOnzM5O96KKLwMfO7p5oPWorKGy6TKbVe7vlFRKiVOoGSjAy
-      ALGORITHM: HS256
-      ACCESS_TOKEN_EXPIRE_MINUTES: 30
+      POSTGRES_HOST: ${{secrets.POSTGRES_HOST}}
+      POSTGRES_DB: ${{secrets.POSTGRES_DB}}
+      POSTGRES_USER: ${{secrets.POSTGRES_USER}}
+      POSTGRES_PASSWORD: ${{secrets.POSTGRES_PASSWORD}}
+      SECRET_KEY: ${{secrets.SECRET_KEY}}
+      ALGORITHM: ${{secrets.ALGORITHM}}
+      ACCESS_TOKEN_EXPIRE_MINUTES: ${{secrets.ACCESS_TOKEN_EXPIRE_MINUTES}}
     runs-on: ubuntu-20.04
     steps:
       - name: pulling git repo
